# FacebookDirectoryScraper

./: FacebookDirectoryScraper.cabal  README.md  stopScraping.sh
source/: DirectoryUtils.hs  FacebookDirectoryUtils.hs  FacebookScraper.hs  FacebookScraperGlobalDefinitions.hs  FacebookScraperMain.hs  MySequence.hs  NetUtils.hs  ScraperConfiguration.hs  Sequence.hs  TorManager.hs  cleanFileFromChar.hs  fbDownload.hs  testFbDownload.hs
