name:                FacebookDirectoryScraper
version:             0.1.0.0
synopsis:            facebook.com/directory scraper
-- description:         
homepage:            www.davidespataro.it
license:             LGPL-3
license-file:        LICENSE
author:              Davide Spataro
maintainer:          davide90.spataro@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable FacebookDirectoryScraper
  main-is:             fbDownload.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7, random >=1.0 && <1.1, process >=1.3 && <1.4, hxt >=9.3 && <9.4, HandsomeSoup >=0.4 && <0.5, MissingH >=1.3 && <1.4, filepath >=1.4 && <1.5, directory >=1.2 && <1.3, network-uri >=2.6, containers
  hs-source-dirs:      source
  default-language:    Haskell2010
